tests/baselines/reference/sourceMapWithMultipleFilesWithFileEndingWithInterface.errors.txt
a.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
b.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== a.ts (1 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var X = 1;
    }
    interface Navigator {
        getGamepads(func?: any): any;
        webkitGetGamepads(func?: any): any
        msGetGamepads(func?: any): any;
        webkitGamepads(func?: any): any;
    }
    
==== b.ts (1 errors) ====
    module m1 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class c1 {
        }
    }
    